# United-Project-Digital-Platform

./: .gitignore  CLAUDE.md  README.md  pom.xml  start-local.bat
python-backend/: .coverage  .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  updg_dev.db
python-backend/alembic/: env.py
python-backend/alembic/versions/: 0001_initial_schema.py  0002_add_data_permission.py  0003_add_new_tables.py
python-backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
python-backend/app/api/: ai.py  audit.py  auth.py  business.py  cost.py  file.py  gateway.py  integration.py  knowledge.py  notify.py  project.py  quality.py  report.py  resource.py  system.py  timesheet.py  workflow.py
python-backend/app/core/: data_permission.py  field_encryption.py  logging.py  masking.py  (+6 more)
python-backend/tests/: conftest.py  test_ai_service.py  test_audit_api.py  test_auth_api.py  test_auth_extended.py  test_auth_security.py  test_business_endpoints.py  test_business_extended.py  test_cost_api.py  test_cost_endpoints.py  test_encryption.py  test_file_api.py  test_gateway_api.py  test_integration_api.py  test_knowledge_api.py  test_llm_client.py  test_logging.py  test_masking.py  test_middleware.py  test_notify_api.py  test_project_api.py  test_project_service.py  test_quality_api.py  test_rbac.py  test_report_api.py  test_resource_api.py  test_resource_extended.py  test_schemas.py  test_security.py  test_system_api.py  test_timesheet_api.py  test_workflow_engine.py  test_workflow_service.py
(+595 files in other folders)
